fixed issue on mobile with footer overlapping

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,6 +3,27 @@ html{
   width:100%;
 }
 
+img,h5,div,a {
+-webkit-user-select: none;
+-khtml-user-select: none;
+-moz-user-select: none;
+-o-user-select: none;
+user-select: none;
+outline: none;
+-webkit-tap-highlight-color: transparent;
+}
+
+img:focus, h5:focus, div:focus, a:focus
+{
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+  outline: none;
+  -webkit-tap-highlight-color: transparent;
+}
+
 
 body{
   background:linear-gradient(to bottom,#304352,#d7d2cc);
@@ -1020,7 +1041,7 @@ cursor: pointer;
 
 @media screen and (max-width:1100px){
   body,html{
-    height: auto;
+    height: 100%;
   }
 
   nav{
